--- a/react/src/index.css
+++ b/react/src/index.css
@@ -1,56 +1,41 @@
 :root {
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+* {
+      font-family: 'Poppins', sans-serif;
+    }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+    .navbar {
+      background-color: #30475e; 
+    }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+    .navbar-brand {
+      color: #ffffff;
+      font-weight: bold;
+      font-size: 25px;
+    }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+    .navbar-nav .nav-item .nav-link {
+      color: #fff;
+      position: relative; 
+      transition: 0.3s;
+      font-weight: 400;
+      padding: 15px;
+    }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+    .navbar-nav .nav-item .nav-link::before {
+      content: '';
+      position: absolute;
+      width: 0%;
+      height: 2px;
+      bottom: 0;
+      left: 0;
+      background-color: #f8b739;
+      transition: 0.3s;
+      color:#fff;
+    }
+
+    .navbar-nav .nav-item .nav-link:hover::before {
+      width: 100%; 
+      color: #fff;
+    }
